--- a/peripatoiCrud.API/peripatoiCrud.API/appsettings.json
+++ b/peripatoiCrud.API/peripatoiCrud.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PeripatoiConnectionString": "Server=localhost;Database=PeripatoiDb;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
