--- a/peripatoiCrud.API/peripatoiCrud.API/appsettings.json
+++ b/peripatoiCrud.API/peripatoiCrud.API/appsettings.json
@@ -7,6 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PeripatoiConnectionString": "Server=localhost;Database=PeripatoiDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "PeripatoiConnectionString": "Server=localhost;Database=PeripatoiDb;Trusted_Connection=True;TrustServerCertificate=True",
+    "PeripatoiAuthConnectionString": "Server=localhost;Database=PeripatoiAuthDb;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "Key": "GeorgiosMhlionhsJwtAuthenticationSecretKey",
+    "Issuer": "https://localhost:7229",
+    "Audience": "https://localhost:7229"
   }
 }
