--- a/peripatoiCrud.API/Peripatoi.UI/Peripatoi.UI.csproj
+++ b/peripatoiCrud.API/Peripatoi.UI/Peripatoi.UI.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Moq" Version="4.20.70" />
+    <PackageReference Include="NUnit" Version="4.1.0" />
+  </ItemGroup>
+
 </Project>
